css/style.css
/* ... */
/*min Width 768px */
@media screen and (min-width: 768px) {
    
 .nav-menu{
        display: block!important;
    }
    
}


/*------------------------ 7 Slider & Video Home ------------------------*/


.home-slider{
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    width: 100%;
}

.slider{
    background: none !important;
}

.home-video{
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
}



.wow-removed{
     animation-name: none !important;
        visibility: visible !important;
}



















.history-tl-container{
    width:50%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 32px;
    margin-bottom: 32px;
  display:block;
  position:relative;
}
.history-tl-container ul.tl{
    margin:20px 0;
    padding:0;
    display:inline-block;

}
.history-tl-container ul.tl li{
    list-style: none;
    margin:auto;
    margin-left:200px;
    min-height:50px;
    /*background: rgba(255,255,0,0.1);*/
    border-left:1.5px dashed #86D6FF;
    padding:0 0 50px 30px;
    position:relative;
}
.history-tl-container ul.tl li:last-child{ border-left:0;}
.history-tl-container ul.tl li::before{
    position: absolute;
    left: -12px;
    top: -5px;
    content: " ";
    border: 8px solid rgba(255, 255, 255, 0.74);
    border-radius: 500%;
    background: #258CC7;
    height: 24px;
    width: 24px;
    transition: all 500ms ease-in-out;
}

.history-tl-container ul.tl li:hover::before{
    border-color:  #258CC7;
    transition: all 1000ms ease-in-out;
}
ul.tl li .item-title{
    font-size: 22px;
    font-weight: 500;
}
ul.tl li .item-detail{
    color:rgba(0,0,0,0.5);
    font-size: 18px;
}
ul.tl li .timestamp{
    color: #8D8D8D;
    position: absolute;
    width: 180px;
    left: -50%;
    text-align: right;
    font-size: 16px;
}

.copyright {
    font-size: 20px !important;
}

